<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">pzxVideo</string>
    <string name="手机号码" translatable="false">手机号码</string>
    <string name="输入密码" translatable="false">输入密码</string>
    <string name="登录" translatable="false">登 录</string>
    <string name="立即注册" translatable="false">立即注册</string>
    <string name="忘记密码" translatable="false">忘记密码</string>
    <string name="确定修改" translatable="false">确定修改</string>
    <string name="输入验证码" translatable="false">输入验证码</string>
    <string name="获取验证码" translatable="false">获取验证码</string>
    <string name="注册" translatable="false">注册</string>
    <string name="首页" translatable="false">首页</string>

    <string name="视频" translatable="false">视频</string>
    <string name="电影" translatable="false">电影</string>

    <string name="我的" translatable="false">我的</string>
    <string name="动漫" translatable="false">动漫</string>
    <string name="喜剧" translatable="false">喜剧</string>
    <string name="爱情" translatable="false">爱情</string>
    <string name="悬疑" translatable="false">悬疑</string>
    <string name="家庭" translatable="false">家庭</string>
    <string name="科幻" translatable="false">科幻</string>
    <string name="歌舞" translatable="false">歌舞</string>
    <string name="其它" translatable="false">其它</string>
    <string name="点播" translatable="false">点播</string>
    <string name="请输入电影名" translatable="false">请输入视频名称或电影名称</string>
    <string name="退出" translatable="false">退出</string>
    <string name="去充值" translatable="false">去充值</string>
    <string name="个人资料" translatable="false">个人资料</string>
    <string name="我的钱包" translatable="false">我的钱包</string>
    <string name="我的收藏" translatable="false">我的收藏</string>
    <string name="观看历史" translatable="false">观看历史</string>
    <string name="设置" translatable="false">设置</string>
    <string name="客服QQ" translatable="false">客服QQ</string>
    <string name="关于我们" translatable="false">关于我们</string>
    <string name="搜索" translatable="false">搜索</string>
    <string name="搜索结果" translatable="false">搜索结果:</string>
    <string name="暂无数据" translatable="false">暂无数据</string>
    <string name="分类" translatable="false">分类</string>
    <string name="我的资料" translatable="false">我的资料</string>
    <string name="更换头像" translatable="false">更换头像</string>
    <string name="昵称" translatable="false">昵称</string>
    <string name="性别" translatable="false">性别</string>
    <string name="余额" translatable="false">余额 (元)</string>
    <string name="充值" translatable="false">充值</string>
    <string name="提现" translatable="false">提现</string>
    <string name="总收入" translatable="false">总收入</string>
    <string name="总支出" translatable="false">总支出</string>
    <string name="支付方式" translatable="false">支付方式</string>
    <string name="充值金额" translatable="false">充值金额</string>
    <string name="微信支付" translatable="false">微信支付</string>
    <string name="支付宝支付" translatable="false">支付宝支付</string>
    <string name="取消" translatable="false">取消</string>
    <string name="确认" translatable="false">确认</string>
    <string name="确认退出此账号" translatable="false">确认退出此账号?</string>
    <string name="手机号" translatable="false">手机号</string>
    <string name="从相册中选择" translatable="false">从相册中选择</string>
    <string name="拍照" translatable="false">拍照</string>
    <string name="男" translatable="false">男</string>
    <string name="女" translatable="false">女</string>
    <string name="修改昵称" translatable="false">修改昵称</string>
    <string name="请输入新的昵称" translatable="false">请输入新的昵称</string>
    <string name="保存" translatable="false">保存</string>
    <string name="修改手机号" translatable="false">修改手机号</string>
    <string name="输入新的手机号码" translatable="false">输入新的手机号码</string>
    <string name="请输入验证码" translatable="false">请输入验证码</string>
    <string name="请输入新的手机号码" translatable="false">请输入新的手机号码</string>
    <string name="请输入提现金额" translatable="false">请输入提现金额</string>
    <string name="请输入收款人姓名" translatable="false">请输入收款人姓名</string>
    <string name="请输入收款账号" translatable="false">收款账号</string>
    <string name="QQ" translatable="false">QQ</string>
    <string name="朋友圈" translatable="false">朋友圈</string>
    <string name="微信" translatable="false">微信</string>
    <string name="QQ空间" translatable="false">QQ空间</string>
    <string name="我来说两句" translatable="false">我来说两句</string>
    <string name="请输入手机号码" translatable="false">请输入手机号</string>
    <string name="发送成功" translatable="false">发送成功</string>
    <string name="请输入密码" translatable="false">请输入密码</string>
    <string name="发送失败" translatable="false">发送失败</string>
    <string name="手机号码格式不对" translatable="false">手机号码格式不对</string>
    <string name="注册成功" translatable="false">注册成功</string>
    <string name="修改成功" translatable="false">修改成功</string>
    <string name="收费" translatable="false">用卷</string>
    <string name="免费" translatable="false">免费</string>
    <string name="已阅读并同意" translatable="false">已阅读并同意</string>
    <string name="用户协议" translatable="false">用户协议</string>
    <string name="请阅读并同意用户协议" translatable="false">请阅读并同意用户协议</string>
    <string name="登录过期请重新登录" translatable="false">登录过期,请重新登录</string>
    <string name="元" translatable="false">元</string>
    <string name="砖" translatable="false">砖</string>
    <string name="用户信息为空请刷新页面后重试" translatable="false">用户信息为空,请刷新页面后重试</string>
    <string name="请输入要发送的评论" translatable="false">请输入要发送的评论</string>
    <string name="时长" translatable="false">时长</string>
    <string name="今天" translatable="false">今天</string>
    <string name="昨天" translatable="false">昨天</string>
    <string name="三天以内" translatable="false">三天以内</string>
    <string name="四天以内" translatable="false">四天以内</string>
    <string name="五天以内" translatable="false">五天以内</string>
    <string name="六天以内" translatable="false">六天以内</string>
    <string name="七天以内" translatable="false">七天以内</string>
    <string name="精彩评论" translatable="false">精彩评论</string>
    <string name="价格" translatable="false">砖石</string>
    <string name="无效播放地址" translatable="false">无效播放地址</string>
    <string name="无效播放地址请稍候再试" translatable="false">无效播放地址,请稍候再试!</string>
    <string name="再次按下返回键退出APP" translatable="false">再次按下返回键退出APP</string>
    <string name="精彩推荐" translatable="false">精彩推荐</string>
    <string name="收藏" translatable="false">收藏</string>
    <string name="影片名称" translatable="false">影片名称:</string>
    <string name="分享" translatable="false">分享</string>
    <string name="演员" translatable="false">演员</string>
    <string name="人气最高" translatable="false">人气最高</string>
    <string name="片量最多" translatable="false">片量最多</string>
    <string name="演员姓名" translatable="false">演员姓名：</string>
    <string name="演员信息" translatable="false">演员信息</string>
    <string name="全部" translatable="false">全部</string>
    <string name="已收藏" translatable="false">已收藏</string>
    <string name="更多" translatable="false">更多</string>
    <string name="新版本提示语" translatable="false">发现新版本, 请点击确认下载最新版本</string>
    <string name="圈子" translatable="false">圈子</string>
    <string name="发布" translatable="false">发布</string>
    <string name="摄像" translatable="false">摄像</string>
    <string name="详情" translatable="false">详情</string>
    <string name="请输入这一刻的想法" translatable="false">请输入这一刻的想法</string>
    <string name="发送成功等待管理员审核通过" translatable="false">评论成功,等待管理员审核通过</string>
    <string name="发布成功等待管理员审核通过" translatable="false">发布成功,等待管理员审核通过</string>
    <string name="确认删除此条信息" translatable="false">确认删除此条信息吗?</string>
    <string name="刷一刷" translatable="false">刷一刷</string>
    <string name="支付提示" translatable="false">是否用观影次数购买此视频?\n分享可获得观影次数</string>
    <string name="猜你喜欢" translatable="false">猜你喜欢</string>
    <string name="添加地点" translatable="false">添加地点</string>
    <string name="请添加一个地点" translatable="false">请添加一个地点</string>
    <string name="小说" translatable="false">小说</string>
    <string name="图片" translatable="false">图片</string>
    <string name="有声小说" translatable="false">有声小说</string>
    <string name="今日可观影次数" translatable="false">今日可观影次数</string>
    <string name="立即推广" translatable="false">立即推广(免费迅速获取每日观影次数)</string>
    <string name="推广" translatable="false">推广</string>
    <string name="我的推广" translatable="false">我的推广</string>
    <string name="推广分享" translatable="false">推广分享</string>
    <string name="保存二维码" translatable="false">保存二维码</string>
    <string name="复制推广链接" translatable="false">复制推广链接</string>
    <string name="音频" translatable="false">音频</string>
    <string name="邀请码" translatable="false">邀请码</string>
    <string name="剩余观影次数" translatable="false">剩余观影次数</string>
    <string name="福利" translatable="false">福利</string>
    <string name="立即支付" translatable="false">立即使用</string>
    <string name="vip会员" translatable="false">vip会员</string>
    <string name="你还不是会员" translatable="false">你还不是会员</string>
    <string name="去购买" translatable="false">去购买</string>
    <string name="支付" translatable="false">支付</string>
    <string name="成为会员全站通行" translatable="false">成为会员,全站通行</string>
    <string name="算了吧" translatable="false">算了吧</string>
    <string name="立即升级" translatable="false">立即升级</string>
    <string name="升级会员" translatable="false">升级会员</string>
    <string name="视频播放购买提示" translatable="false">今日免费观影次数已用完，通过分享或升级为会员可全站无限免费观看。</string>
    <string name="选择分类" translatable="false">选择分类</string>
</resources>
