<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#7f35343d"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_alignParentBottom="true"
        android:background="#ffffff"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingLeft="15dp"
        android:paddingRight="15dp">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:id="@+id/qqButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:drawableTop="@drawable/icon_share_qq"
                android:drawablePadding="5dp"
                android:gravity="center"
                android:text="@string/QQ"
                android:textSize="14sp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:id="@+id/qqPyButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:drawableTop="@drawable/icon_share_qq_py"
                android:drawablePadding="5dp"
                android:gravity="center"
                android:text="@string/QQ空间"
                android:textSize="14sp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:id="@+id/wxButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:drawableTop="@drawable/icon_share_wx"
                android:drawablePadding="5dp"
                android:gravity="center"
                android:text="@string/微信"
                android:textSize="14sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:id="@+id/wxPyButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:drawableTop="@drawable/icon_share_wx_py"
                android:drawablePadding="5dp"
                android:gravity="center"
                android:text="@string/朋友圈"
                android:textSize="14sp" />
        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>