<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:orientation="vertical">

    <View
        android:id="@+id/lineView"
        android:layout_width="match_parent"
        android:layout_height="0.8dp"
        android:background="#E6E6E6" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <RelativeLayout
            android:id="@+id/homeButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:id="@+id/homeTextView"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginTop="3dp"
                android:drawableTop="@drawable/icon_home_group_false"
                android:gravity="center"
                android:text="@string/首页"
                android:textColor="#D6D6D6"
                android:textSize="11sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/videoButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:id="@+id/videoTextView"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginTop="3dp"
                android:drawableTop="@drawable/icon_video_group_false"
                android:gravity="center"
                android:text="@string/刷一刷"
                android:textColor="#D6D6D6"
                android:textSize="11sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/typeButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:id="@+id/typeTextView"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginTop="3dp"
                android:drawableTop="@drawable/icon_type_false"
                android:gravity="center"
                android:text="@string/分类"
                android:textColor="#D6D6D6"
                android:textSize="11sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/circleButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:id="@+id/circleTextView"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginTop="3dp"
                android:drawableTop="@drawable/icon_circle_false"
                android:gravity="center"
                android:drawablePadding="3dp"
                android:text="@string/圈子"
                android:textColor="#D6D6D6"
                android:textSize="11sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/myButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:id="@+id/myTextView"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginTop="3dp"
                android:drawableTop="@drawable/icon_my_false"
                android:gravity="center"
                android:text="@string/我的"
                android:textColor="#D6D6D6"
                android:textSize="11sp" />
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>