<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/libs_view_default_titlebar" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ffffff"
        android:orientation="vertical">

        <EditText
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:background="#00000000"
            android:hint="@string/请输入新的昵称"
            android:padding="3dp"
            android:textSize="14sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.8dp"
            android:background="#E6E6E6" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:includeFontPadding="false"
            android:paddingTop="11dp"
            android:paddingBottom="11dp"
            android:text="好的名字能让人更容易记住你"
            android:textColor="#ff999999"
            android:textSize="12sp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="100dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/icon_radius_d76dbb_40"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/cancelButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/取消"
                android:textColor="#ffffff"
                android:textSize="15sp" />

            <View
                android:layout_width="0.8dp"
                android:layout_height="match_parent"
                android:background="#ffffff" />

            <TextView
                android:id="@+id/confirmButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/确认"
                android:textColor="#ffffff"
                android:textSize="15sp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>