<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.facebook.drawee.view.SimpleDraweeView
        android:layout_width="match_parent"
        android:layout_height="293dp"
        android:background="@drawable/img_wallet_bg" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <!--头部   -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="260dp"
                android:orientation="vertical">

                <include layout="@layout/view_base_titlebar" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="29dp"
                    android:includeFontPadding="false"
                    android:text="@string/余额"
                    android:textColor="#ffffffff"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/yeTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="21dp"
                    android:includeFontPadding="false"
                    android:text="0.0"
                    android:textColor="#ffffffff"
                    android:textSize="40sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="31dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/czButton"
                        android:layout_width="116dp"
                        android:layout_height="32dp"
                        android:background="@drawable/icon_rect_ffffff_40"
                        android:gravity="center"
                        android:text="@string/充值"
                        android:textColor="#ffffffff"
                        android:textSize="15sp" />

                    <View
                        android:layout_width="46dp"
                        android:layout_height="match_parent" />

                    <TextView
                        android:id="@+id/txButton"
                        android:layout_width="116dp"
                        android:layout_height="32dp"
                        android:background="@drawable/icon_rect_ffffff_40"
                        android:gravity="center"
                        android:text="@string/提现"
                        android:textColor="#ffffffff"
                        android:textSize="15sp" />
                </LinearLayout>
            </LinearLayout>

            <com.flyco.tablayout.SlidingTabLayout
                android:id="@+id/SlidingTabLayout"
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:background="#ffffff"
                app:tl_indicator_color="#d76dbb"
                app:tl_indicator_width_equal_title="true"
                app:tl_tab_space_equal="true"
                app:tl_textSelectColor="#d76dbb"
                app:tl_textUnselectColor="#333333"
                app:tl_textsize="14sp" />

            <android.support.v4.view.ViewPager
                android:id="@+id/ViewPager"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </LinearLayout>
        <!--提现-->
        <RelativeLayout
            android:id="@+id/extRoot"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#80000000">

            <LinearLayout
                android:id="@+id/extContent"
                android:layout_width="match_parent"
                android:layout_height="227dp"
                android:layout_centerInParent="true"
                android:layout_marginLeft="60dp"
                android:layout_marginRight="60dp"
                android:background="@drawable/icon_radius_ffffff_5"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:gravity="center"
                    android:text="提现"
                    android:textColor="#ff333333"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/editText1"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_marginLeft="23dp"
                    android:layout_marginRight="23dp"
                    android:background="@drawable/icon_rect_b3b3b3_3"
                    android:hint="@string/请输入提现金额"
                    android:lines="1"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:singleLine="true"
                    android:textSize="12sp" />

                <EditText
                    android:id="@+id/editText2"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_marginLeft="23dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="23dp"
                    android:background="@drawable/icon_rect_b3b3b3_3"
                    android:hint="@string/请输入收款人姓名"
                    android:lines="1"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:singleLine="true"
                    android:textSize="12sp" />

                <EditText
                    android:id="@+id/editText3"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_marginLeft="23dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="23dp"
                    android:background="@drawable/icon_rect_b3b3b3_3"
                    android:hint="@string/请输入收款账号"
                    android:lines="1"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:singleLine="true"
                    android:textSize="12sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.8dp"
                    android:background="#B3B3B3" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/cancelButton"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="取消"
                        android:textColor="#ff333333"
                        android:textSize="14sp" />

                    <View
                        android:layout_width="0.8dp"
                        android:layout_height="match_parent"
                        android:background="#B3B3B3" />

                    <TextView
                        android:id="@+id/confirmButton"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="确定"
                        android:textColor="#12bc1a"
                        android:textSize="14sp" />
                </LinearLayout>


            </LinearLayout>

        </RelativeLayout>

    </RelativeLayout>
</RelativeLayout>